# FigureParser

./: CMakeLists.txt  Figures.cpp  Figures.h  WhiteBlackImageParser.cpp  WhiteBlackImageParser.h  main.cpp  png_converting.cpp  png_converting.h  png_reading.cpp  png_reading.h  readme.md
